--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>lang.sel</groupId>
   <artifactId>simple-embedded-language</artifactId>
-  <version>0.0.3-SNAPSHOT</version>
+  <version>0.0.4-SNAPSHOT</version>
   <packaging>jar</packaging>
-
   <name>Simple Embedded Language</name>
   <description>Simple Interpreted Embedded Language on JVM</description>
   <url>http://github.com/diegorubin/sel</url>
-
   <licenses>
     <license>
       <name>Apache License, Version 2.0</name>
@@ -18,7 +15,6 @@
       <distribution>repo</distribution>
     </license>
   </licenses>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
@@ -26,23 +22,16 @@
     <maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
     <mockito.version>1.8.4</mockito.version>
     <junit.version>4.13.1</junit.version>
-
     <!--Github configuration setting.xml -->
     <github.global.server>github</github.global.server>
   </properties>
-
   <!--SCM settings -->
   <scm>
     <url>https://github.com/diegorubin/sel</url>
-    <connection>
-      scm:git:https://github.com/diegorubin/sel.git
-    </connection>
-    <developerConnection>
-      scm:git:https://github.com/diegorubin/sel.git
-    </developerConnection>
+    <connection>scm:git:https://github.com/diegorubin/sel.git</connection>
+    <developerConnection>scm:git:https://github.com/diegorubin/sel.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
-
   <build>
     <plugins>
       <plugin>
@@ -50,7 +39,6 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>${maven.release.plugin.version}</version>
       </plugin>
-
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.6</version>
@@ -61,7 +49,6 @@
           </includes>
         </configuration>
       </plugin>
-
       <!-- coverage -->
       <plugin>
         <groupId>org.jacoco</groupId>
@@ -82,9 +69,7 @@
           </execution>
         </executions>
       </plugin>
-
     </plugins>
-
     <pluginManagement>
       <plugins>
         <plugin>
@@ -98,24 +83,17 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
   </build>
-
   <dependencies>
-
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-all</artifactId>
       <version>${mockito.version}</version>
     </dependency>
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
     </dependency>
-
   </dependencies>
-
 </project>
-
